# Wildcard

./: CODE_OF_CONDUCT.md  Cargo.toml  Patterns.doap  README.md  Wildcard.doap  io.github.fkinoshita.Patterns.json  io.github.fkinoshita.Wildcard.json  meson.build
.github/workflows/: flatpak.yml
build-aux/: io.github.fkinoshita.Wildcard.Devel.json
data/: io.github.fkinoshita.Patterns.desktop.in.in  io.github.fkinoshita.Patterns.gschema.xml.in  io.github.fkinoshita.Patterns.metainfo.xml.in.in  io.github.fkinoshita.Wildcard.desktop.in.in  io.github.fkinoshita.Wildcard.gschema.xml.in  io.github.fkinoshita.Wildcard.metainfo.xml.in.in  meson.build
data/icons/: meson.build
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/ui/: window.blp  window.ui
po/: POTFILES.in  meson.build
src/: application.rs  config.rs.in  i18n.rs  main.rs  meson.build  window.rs
