[package]
name = "wildcard"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.6", package = "gtk4" }
once_cell = "1.12"
regex = "1.7"

[dependencies.adw]
package = "libadwaita"
version = "0.4.3"
features = ["v1_3"]
